fix year alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -474,6 +474,13 @@ footer.sticky-bottom {
     margin-bottom: -2rem;
     text-align: right;
   }
+  h2.year2 {
+    //color: var(--global-divider-color);
+    border-bottom: 1px solid var(--global-divider-color);
+    padding-top: 1rem;
+    margin-bottom: 2rem;
+    text-align: left;
+  }
   ol.bibliography {
     list-style: none;
     padding: 0;
